--- a/index.html
+++ b/index.html
@@ -3,105 +3,114 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Iconos-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!--CSS-->
     <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./img/priring.webp" type="image/x-icon">
-    <title>A Latale Shop</title>
+    <title>Latale Shop</title>
 </head>
 
 <body>
-    <header class="tale-header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light tale-navbar">
-            <div class="container-fluid tale-nav-div">
-                <a class="navbar-brand tale-mainlogo" href="#"><img src="./img/latalelogo2.png" alt=""></a>
-                <button class="navbar-toggler tale-mainlogo-button" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse tale-nav-right" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 tale-order-unorder">
-                        <li class="nav-item dropdown tale-order-list">
-                            <ul class="tale-order-list-unorder">
-                                <select id="selectOrden" class="form-select form-select-sm tale-order-select"
-                                    aria-label=".form-select-sm example">
-                                    <option selected>Ordenar por:</option>
-                                    <option value="1">Mayor a menor</option>
-                                    <option value="2">Menor a mayor</option>
-                                    <option value="3">alphabetically</option>
-                                </select>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex tale-search-form">
-                        <input id="buscador" class="form-control me-2 tale-search-form-input" type="search" placeholder="Search"
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Mis Libros</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon "></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+                    <form class="d-flex">
+                        <input id="buscador" class="form-control me-2" placeholder="Find your item"
                             aria-label="Search">
-                        <button id="btnBuscar" class="btn btn-outline-success tale-search-form-button">Search</button>
+                        <button id="btnBuscar" class="btn btn-outline-success">Buscar</button>
                     </form>
-                    <ul className="navbar-nav me-auto tale-cart-ullist">
-                        <li className="nav-item tale-cart-lilist">
-                            <a id="botonCarrito" data-bs-toggle="modal" data-bs-target="#idModal" class="btn btn-secondary tale-cartbutton"><img src="./img/shopping-cart.png" alt=""></a>
-                        </li>
-                    </ul>
+
+                </ul>
+                <ul>
+                    <select id="selectOrden" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                        <option selected>Ordenar por:</option>
+                        <option value="1">Mayor a menor</option>
+                        <option value="2">Menor a mayor</option>
+                        <option value="3">Alfabeticamente</option>
+                    </select>
+                </ul>
+                <ul className="navbar-nav me-auto">
+                    <li className="nav-item ">
+                        <a id="botonCarrito" data-bs-toggle="modal" data-bs-target="#idModal"
+                            class="btn btn-secondary"><i class="fas fa-shopping-cart fa-1x"></i></a>
+                    </li>
+                </ul>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+    </nav>
+    <br><br>
+    <form>
+        <div class="mb-3">
+            <label for="titulo" class="form-label">Titulo</label>
+            <input type="text" class="form-control" id="inputName" aria-describedby="titulo">
+
+        </div>
+        <div class="mb-3">
+            <label for="autor" class="form-label">Autor</label>
+            <input type="text" class="form-control" id="inputType" aria-describedby="autor">
+
+        </div>
+        <div class="mb-3">
+            <label for="precio" class="form-label">Precio:</label>
+            <input type="text" class="form-control" id="inputPrice" aria-describedby="precio">
+
+        </div>
+    </form>
+    <button type="text" id="guardarLibroBtn" class="btn btn-success">Guardar Libro</button>
+    <br><br>
+    <div class="container">
+        <div id="coincidencia"></div>
+        <div id="productos" class="row">
+        </div>
+    </div>
+
+
+
+    <!--Modal Carrito-->
+    <div class="modal fade" id="idModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Carrito de Compras</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modal-body">
+
+                </div>
+                <div class="row ml-ato">
+                    <p id="precioTotal"></p>
+                </div>
+                <div class="modal-footer">
+
+
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" data-bs-dismiss="modal" class="btn btn-success"
+                        id="botonFinalizarCompra">Finalizar Compra</button>
                 </div>
             </div>
-        </nav>
-    </header>
-    <main>
-        <section class="tale-main-section">
-            <br><br>
-            <form>
-                <div class="mb-3">
-                    <label for="titulo" class="form-label">titulo</label>
-                    <input type="text" class="form-control" id="tituloInput" aria-describedby="titulo">
-                </div>
-                <div class="mb-3">
-                    <label for="autor" class="form-label">autor</label>
-                    <input type="text" class="form-control" id="nameInput" aria-describedby="autor">
-                </div>
-                <div class="mb-3">
-                    <label for="precio" class="form-label">Price:</label>
-                    <input type="text" class="form-control" id="precioInput" aria-describedby="precio">
-                </div>
-            </form>
-                <button type="text" id="guardarLibroBtn" class="btn btn-success">Add Item</button>
-                <br><br>
-                <div class="container">
-                    <div id="coincidencia">
-                    </div>
-                    <div id="productos" class="row">
-                    </div>
-                </div>
-        </section>
-        <section>
-            <div class="modal fade" id="idModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Carrito de Compras</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body" id="modal-body">
-                        </div>
-                        <div class="row ml-ato">
-                            <p id="precioTotal"></p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" data-bs-dismiss="modal" class="btn btn-success" id="botonFinalizarCompra">Finalizar Compra</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+        </script>
+
     <script src="./js/class.js"></script>
     <script src="./js/items.js"></script>
 </body>
